# hdzero-vtx

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini
.github/workflows/: build.yml
boards/: DM5680.json
modules/platform/: Generic-SDCC-C.cmake
script/: post_script.py  pre_script.py  sdcc_map.py
src/: camera.c  camera.h  common.h  dm5680_fw_tx.uvopt  dm5680_fw_tx.uvproj  dm6300.c  dm6300.h  global.c  global.h  hardware.c  hardware.h  hdzero.h  i2c.c  i2c.h  i2c_device.c  i2c_device.h  isr.c  isr.h  lifetime.c  lifetime.h  mcu.c  monitor.c  monitor.h  msp_displayport.c  msp_displayport.h  msp_protocol.h  print.c  print.h  rom.c  rom.h  runcam.c  runcam.h  sfr_def.h  sfr_ext.c  sfr_ext.h  smartaudio_protocol.c  smartaudio_protocol.h  spi.c  spi.h  stdint.h  (+15 more)
src/fault/: fault.c  fault.h  fault_table.c  fault_table.h
targets/: common.ini  foxeer_vtx.ini  hdzero_aio.ini  hdzero_aio15.ini  hdzero_aio5.ini  hdzero_eco.ini  hdzero_freestyle.ini  hdzero_freestyle_v1.ini  hdzero_freestyle_v2.ini  hdzero_pico.ini  hdzero_race_v1.ini  hdzero_race_v2.ini  hdzero_race_v3.ini  hdzero_whoop.ini  hdzero_whoop_lite.ini
